--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "spatie/laravel-webhook-client": "^3.4",
         "swisnl/filament-backgrounds": "^1.1",
         "tapp/filament-webhook-client": "^1.1",
-        "z3d0x/filament-logger": "^0.8.0"
+        "z3d0x/filament-logger": "^0.8.0",
+        "zerosdev/tripay-sdk-php": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
